# kaval

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.executor  README.md  README_BOOTSTRAP.md  STATUS.md  docker-compose.yml  pyproject.toml
.codex/: config.toml.bak
.taskmaster/: config.json  state.json
docs/: CODEX_TASKMASTER_SETUP.md  phase3_4_requirements_expansion.md  prd.md
migrations/: 0001_phase0_baseline.sql  0002_phase2b_credential_requests.sql  0003_phase2b_vault.sql  0004_phase3a_capability_runtime_signals.sql  0005_phase3b_webhook_payloads.sql  0006_phase3b_webhook_event_states.sql  0007_phase3b_user_note_versions.sql  0008_phase3c_dependency_overrides.sql  0009_phase3c_service_check_overrides.sql  0010_phase3c_finding_feedback_records.sql  0011_phase3c_maintenance_windows.sql
plans/: phase-0.md  phase-1.md  phase-2a.md  phase-2b.md  phase-3.md  phase-3a.md  phase-3b.md  phase-3c.md  phase-4.md
schemas/: adapter_result.json  approval_token.json  change.json  credential_vault_change_password_request.json  credential_vault_mutation_response.json  credential_vault_response.json  credential_vault_test_response.json  descriptor_community_export_response.json  evidence_step.json  executor_action_request.json  executor_action_result.json  finding.json  finding_dismiss_request.json  finding_dismiss_response.json  finding_review_response.json  incident.json  incident_lifecycle_transition.json  investigation.json  journal_entry.json  maintenance_mode_mutation_response.json  maintenance_mode_response.json  (+43 more)
(+387 files in other folders)
