[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaval"
version = "0.1.0"
description = "Self-hosted observability and investigation platform for Unraid homelabs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apprise>=1.9,<2",
    "fastapi>=0.115,<1",
    "pydantic>=2.11,<3",
    "PyYAML>=6.0,<7",
]

[project.scripts]
kaval = "kaval.cli:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "jsonschema>=4.23,<5",
    "mypy>=1.18,<2",
    "pytest>=8.4,<9",
    "ruff>=0.13,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["executor*", "kaval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
strict = true
packages = ["kaval", "executor"]
